v1/docs/ModelsCertStoreLocationsCertificateStoreLocationsDetail.md
# ModelsCertStoreLocationsCertificateStoreLocationsDetail

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**StoreId** | Pointer to **string** |  | [optional] 
**StoreTypeId** | Pointer to **int32** |  | [optional] 
**ClientMachine** | Pointer to **string** |  | [optional] 
**StorePath** | Pointer to **string** |  | [optional] 
**AgentPool** | Pointer to **string** |  | [optional] 
**Alias** | Pointer to **string** |  | [optional] 
**IPAddress** | Pointer to **string** |  | [optional] 
**Port** | Pointer to **int32** |  | [optional] 
**NetworkName** | Pointer to **string** |  | [optional] 

## Methods

### NewModelsCertStoreLocationsCertificateStoreLocationsDetail

`func NewModelsCertStoreLocationsCertificateStoreLocationsDetail() *ModelsCertStoreLocationsCertificateStoreLocationsDetail`

NewModelsCertStoreLocationsCertificateStoreLocationsDetail instantiates a new ModelsCertStoreLocationsCertificateStoreLocationsDetail object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsCertStoreLocationsCertificateStoreLocationsDetailWithDefaults

`func NewModelsCertStoreLocationsCertificateStoreLocationsDetailWithDefaults() *ModelsCertStoreLocationsCertificateStoreLocationsDetail`

NewModelsCertStoreLocationsCertificateStoreLocationsDetailWithDefaults instantiates a new ModelsCertStoreLocationsCertificateStoreLocationsDetail object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetStoreId

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetStoreId() string`

GetStoreId returns the StoreId field if non-nil, zero value otherwise.

### GetStoreIdOk

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetStoreIdOk() (*string, bool)`

GetStoreIdOk returns a tuple with the StoreId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetStoreId

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetStoreId(v string)`

SetStoreId sets StoreId field to given value.

### HasStoreId

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) HasStoreId() bool`

HasStoreId returns a boolean if a field has been set.

### GetStoreTypeId

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetStoreTypeId() int32`

GetStoreTypeId returns the StoreTypeId field if non-nil, zero value otherwise.

### GetStoreTypeIdOk

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetStoreTypeIdOk() (*int32, bool)`

GetStoreTypeIdOk returns a tuple with the StoreTypeId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetStoreTypeId

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetStoreTypeId(v int32)`

SetStoreTypeId sets StoreTypeId field to given value.

### HasStoreTypeId

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) HasStoreTypeId() bool`

HasStoreTypeId returns a boolean if a field has been set.

### GetClientMachine

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetClientMachine() string`

GetClientMachine returns the ClientMachine field if non-nil, zero value otherwise.

### GetClientMachineOk

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetClientMachineOk() (*string, bool)`

GetClientMachineOk returns a tuple with the ClientMachine field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetClientMachine

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetClientMachine(v string)`

SetClientMachine sets ClientMachine field to given value.

### HasClientMachine

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) HasClientMachine() bool`

HasClientMachine returns a boolean if a field has been set.

### GetStorePath

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetStorePath() string`

GetStorePath returns the StorePath field if non-nil, zero value otherwise.

### GetStorePathOk

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetStorePathOk() (*string, bool)`

GetStorePathOk returns a tuple with the StorePath field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetStorePath

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetStorePath(v string)`

SetStorePath sets StorePath field to given value.

### HasStorePath

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) HasStorePath() bool`

HasStorePath returns a boolean if a field has been set.

### GetAgentPool

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetAgentPool() string`

GetAgentPool returns the AgentPool field if non-nil, zero value otherwise.

### GetAgentPoolOk

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetAgentPoolOk() (*string, bool)`

GetAgentPoolOk returns a tuple with the AgentPool field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetAgentPool

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetAgentPool(v string)`

SetAgentPool sets AgentPool field to given value.

### HasAgentPool

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) HasAgentPool() bool`

HasAgentPool returns a boolean if a field has been set.

### GetAlias

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetAlias() string`

GetAlias returns the Alias field if non-nil, zero value otherwise.

### GetAliasOk

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetAliasOk() (*string, bool)`

GetAliasOk returns a tuple with the Alias field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetAlias

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetAlias(v string)`

SetAlias sets Alias field to given value.

### HasAlias

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) HasAlias() bool`

HasAlias returns a boolean if a field has been set.

### GetIPAddress

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetIPAddress() string`

GetIPAddress returns the IPAddress field if non-nil, zero value otherwise.

### GetIPAddressOk

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetIPAddressOk() (*string, bool)`

GetIPAddressOk returns a tuple with the IPAddress field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetIPAddress

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetIPAddress(v string)`

SetIPAddress sets IPAddress field to given value.

### HasIPAddress

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) HasIPAddress() bool`

HasIPAddress returns a boolean if a field has been set.

### GetPort

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetPort() int32`

GetPort returns the Port field if non-nil, zero value otherwise.

### GetPortOk

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetPortOk() (*int32, bool)`

GetPortOk returns a tuple with the Port field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetPort

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetPort(v int32)`

SetPort sets Port field to given value.

### HasPort

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) HasPort() bool`

HasPort returns a boolean if a field has been set.

### GetNetworkName

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetNetworkName() string`

GetNetworkName returns the NetworkName field if non-nil, zero value otherwise.

### GetNetworkNameOk

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetNetworkNameOk() (*string, bool)`

GetNetworkNameOk returns a tuple with the NetworkName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetNetworkName

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetNetworkName(v string)`

SetNetworkName sets NetworkName field to given value.

### HasNetworkName

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) HasNetworkName() bool`

HasNetworkName returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


