v11/docs/ModelsCertStoreLocationsCertificateStoreLocationsDetail.md
# ModelsCertStoreLocationsCertificateStoreLocationsDetail

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**StoreType** | Pointer to **NullableString** |  | [optional] 
**CertificateId** | Pointer to **int32** |  | [optional] 
**StoreId** | Pointer to **string** |  | [optional] 
**StoreTypeId** | Pointer to **int32** |  | [optional] 
**ClientMachine** | Pointer to **NullableString** |  | [optional] 
**StorePath** | Pointer to **NullableString** |  | [optional] 
**AgentPool** | Pointer to **NullableString** |  | [optional] 
**Alias** | Pointer to **NullableString** |  | [optional] 
**IpAddress** | Pointer to **NullableString** |  | [optional] 
**Port** | Pointer to **NullableInt32** |  | [optional] 
**NetworkName** | Pointer to **NullableString** |  | [optional] 

## Methods

### NewModelsCertStoreLocationsCertificateStoreLocationsDetail

`func NewModelsCertStoreLocationsCertificateStoreLocationsDetail() *ModelsCertStoreLocationsCertificateStoreLocationsDetail`

NewModelsCertStoreLocationsCertificateStoreLocationsDetail instantiates a new ModelsCertStoreLocationsCertificateStoreLocationsDetail object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsCertStoreLocationsCertificateStoreLocationsDetailWithDefaults

`func NewModelsCertStoreLocationsCertificateStoreLocationsDetailWithDefaults() *ModelsCertStoreLocationsCertificateStoreLocationsDetail`

NewModelsCertStoreLocationsCertificateStoreLocationsDetailWithDefaults instantiates a new ModelsCertStoreLocationsCertificateStoreLocationsDetail object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetStoreType

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetStoreType() string`

GetStoreType returns the StoreType field if non-nil, zero value otherwise.

### GetStoreTypeOk

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetStoreTypeOk() (*string, bool)`

GetStoreTypeOk returns a tuple with the StoreType field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetStoreType

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetStoreType(v string)`

SetStoreType sets StoreType field to given value.

### HasStoreType

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) HasStoreType() bool`

HasStoreType returns a boolean if a field has been set.

### SetStoreTypeNil

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetStoreTypeNil(b bool)`

 SetStoreTypeNil sets the value for StoreType to be an explicit nil

### UnsetStoreType
`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) UnsetStoreType()`

UnsetStoreType ensures that no value is present for StoreType, not even an explicit nil
### GetCertificateId

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetCertificateId() int32`

GetCertificateId returns the CertificateId field if non-nil, zero value otherwise.

### GetCertificateIdOk

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetCertificateIdOk() (*int32, bool)`

GetCertificateIdOk returns a tuple with the CertificateId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCertificateId

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetCertificateId(v int32)`

SetCertificateId sets CertificateId field to given value.

### HasCertificateId

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) HasCertificateId() bool`

HasCertificateId returns a boolean if a field has been set.

### GetStoreId

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetStoreId() string`

GetStoreId returns the StoreId field if non-nil, zero value otherwise.

### GetStoreIdOk

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetStoreIdOk() (*string, bool)`

GetStoreIdOk returns a tuple with the StoreId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetStoreId

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetStoreId(v string)`

SetStoreId sets StoreId field to given value.

### HasStoreId

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) HasStoreId() bool`

HasStoreId returns a boolean if a field has been set.

### GetStoreTypeId

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetStoreTypeId() int32`

GetStoreTypeId returns the StoreTypeId field if non-nil, zero value otherwise.

### GetStoreTypeIdOk

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetStoreTypeIdOk() (*int32, bool)`

GetStoreTypeIdOk returns a tuple with the StoreTypeId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetStoreTypeId

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetStoreTypeId(v int32)`

SetStoreTypeId sets StoreTypeId field to given value.

### HasStoreTypeId

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) HasStoreTypeId() bool`

HasStoreTypeId returns a boolean if a field has been set.

### GetClientMachine

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetClientMachine() string`

GetClientMachine returns the ClientMachine field if non-nil, zero value otherwise.

### GetClientMachineOk

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetClientMachineOk() (*string, bool)`

GetClientMachineOk returns a tuple with the ClientMachine field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetClientMachine

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetClientMachine(v string)`

SetClientMachine sets ClientMachine field to given value.

### HasClientMachine

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) HasClientMachine() bool`

HasClientMachine returns a boolean if a field has been set.

### SetClientMachineNil

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetClientMachineNil(b bool)`

 SetClientMachineNil sets the value for ClientMachine to be an explicit nil

### UnsetClientMachine
`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) UnsetClientMachine()`

UnsetClientMachine ensures that no value is present for ClientMachine, not even an explicit nil
### GetStorePath

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetStorePath() string`

GetStorePath returns the StorePath field if non-nil, zero value otherwise.

### GetStorePathOk

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetStorePathOk() (*string, bool)`

GetStorePathOk returns a tuple with the StorePath field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetStorePath

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetStorePath(v string)`

SetStorePath sets StorePath field to given value.

### HasStorePath

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) HasStorePath() bool`

HasStorePath returns a boolean if a field has been set.

### SetStorePathNil

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetStorePathNil(b bool)`

 SetStorePathNil sets the value for StorePath to be an explicit nil

### UnsetStorePath
`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) UnsetStorePath()`

UnsetStorePath ensures that no value is present for StorePath, not even an explicit nil
### GetAgentPool

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetAgentPool() string`

GetAgentPool returns the AgentPool field if non-nil, zero value otherwise.

### GetAgentPoolOk

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetAgentPoolOk() (*string, bool)`

GetAgentPoolOk returns a tuple with the AgentPool field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetAgentPool

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetAgentPool(v string)`

SetAgentPool sets AgentPool field to given value.

### HasAgentPool

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) HasAgentPool() bool`

HasAgentPool returns a boolean if a field has been set.

### SetAgentPoolNil

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetAgentPoolNil(b bool)`

 SetAgentPoolNil sets the value for AgentPool to be an explicit nil

### UnsetAgentPool
`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) UnsetAgentPool()`

UnsetAgentPool ensures that no value is present for AgentPool, not even an explicit nil
### GetAlias

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetAlias() string`

GetAlias returns the Alias field if non-nil, zero value otherwise.

### GetAliasOk

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetAliasOk() (*string, bool)`

GetAliasOk returns a tuple with the Alias field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetAlias

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetAlias(v string)`

SetAlias sets Alias field to given value.

### HasAlias

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) HasAlias() bool`

HasAlias returns a boolean if a field has been set.

### SetAliasNil

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetAliasNil(b bool)`

 SetAliasNil sets the value for Alias to be an explicit nil

### UnsetAlias
`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) UnsetAlias()`

UnsetAlias ensures that no value is present for Alias, not even an explicit nil
### GetIpAddress

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetIpAddress() string`

GetIpAddress returns the IpAddress field if non-nil, zero value otherwise.

### GetIpAddressOk

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetIpAddressOk() (*string, bool)`

GetIpAddressOk returns a tuple with the IpAddress field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetIpAddress

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetIpAddress(v string)`

SetIpAddress sets IpAddress field to given value.

### HasIpAddress

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) HasIpAddress() bool`

HasIpAddress returns a boolean if a field has been set.

### SetIpAddressNil

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetIpAddressNil(b bool)`

 SetIpAddressNil sets the value for IpAddress to be an explicit nil

### UnsetIpAddress
`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) UnsetIpAddress()`

UnsetIpAddress ensures that no value is present for IpAddress, not even an explicit nil
### GetPort

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetPort() int32`

GetPort returns the Port field if non-nil, zero value otherwise.

### GetPortOk

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetPortOk() (*int32, bool)`

GetPortOk returns a tuple with the Port field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetPort

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetPort(v int32)`

SetPort sets Port field to given value.

### HasPort

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) HasPort() bool`

HasPort returns a boolean if a field has been set.

### SetPortNil

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetPortNil(b bool)`

 SetPortNil sets the value for Port to be an explicit nil

### UnsetPort
`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) UnsetPort()`

UnsetPort ensures that no value is present for Port, not even an explicit nil
### GetNetworkName

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetNetworkName() string`

GetNetworkName returns the NetworkName field if non-nil, zero value otherwise.

### GetNetworkNameOk

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) GetNetworkNameOk() (*string, bool)`

GetNetworkNameOk returns a tuple with the NetworkName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetNetworkName

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetNetworkName(v string)`

SetNetworkName sets NetworkName field to given value.

### HasNetworkName

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) HasNetworkName() bool`

HasNetworkName returns a boolean if a field has been set.

### SetNetworkNameNil

`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) SetNetworkNameNil(b bool)`

 SetNetworkNameNil sets the value for NetworkName to be an explicit nil

### UnsetNetworkName
`func (o *ModelsCertStoreLocationsCertificateStoreLocationsDetail) UnsetNetworkName()`

UnsetNetworkName ensures that no value is present for NetworkName, not even an explicit nil

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


